# gauge

./: LICENSE  README.md  dune-project  gauge.opam
examples/: example.ml  locrec.ml
lib/: ast_utils.ml  contracts.ml  cost_model.ml  dune  frontend.ml  infer.ml  report.ml
test/: dune  test_cli.ml  test_gauge.ml  test_higher_order.ml  test_locrec_lambda.ml  test_locrec_nested.ml  test_multi_annotations.ml  test_mutual_rec.ml  test_nested_lambdas.ml  test_nonrec.ml  test_parser.ml  test_shadowing.ml
test/features/: dune  test_accumulated_cost.ml  test_array_operations.ml  test_hashtbl_operations.ml  test_higher_order.ml  test_improved_analysis.ml  test_list_append.ml  test_list_functions.ml  test_locrec.ml  test_map_operations.ml  test_multiple_recursion.ml  test_option_operations.ml  test_queue_operations.ml  test_recursive_patterns.ml  test_ref_mutable.ml  test_result_operations.ml  test_seq_operations.ml  test_set_operations.ml  test_stack_operations.ml  test_string_operations.ml  test_tailrec.ml
test/integration/: dune  test_exit_code.ml  test_multi_annotations.ml
test/unit/: dune  test_parser.ml
