(lang dune 3.20)

(name gauge)

(generate_opam_files true)

(source
 (github ae-bii/gauge))

(authors "Anupam Bhakta <ab5494@columbia.edu>")

(maintainers "Anupam Bhakta <ab5494@columbia.com>")

(license LICENSE)


(package
 (name gauge)
 (synopsis "static complexity linter for OCaml")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
